k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: news-backend
  template:
    metadata:
      labels:
        app: news-backend
    spec:
      containers:
        - name: backend
          image: gcr.io/rosy-resolver-465404-b2/personalizednewsrecommenderapp-springboot-backend:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: news-backend
spec:
  selector:
    app: news-backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
